testdata/baselines/reference/submodule/compiler/jsdocImportTypeNodeNamespace.errors.txt
Main.js(2,21): error TS8016: Type assertion expressions can only be used in TypeScript files.
Main.js(2,49): error TS2694: Namespace '"GeometryType"' has no exported member 'default'.


==== GeometryType.d.ts (0 errors) ====
    declare namespace _default {
      export const POINT: string;
    }
    export default _default;
    
==== Main.js (2 errors) ====
    export default function () {
      return /** @type {import('./GeometryType.js').default} */ ('Point');
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8016: Type assertion expressions can only be used in TypeScript files.
                                                    ~~~~~~~
!!! error TS2694: Namespace '"GeometryType"' has no exported member 'default'.
    }
    